<resources>
    <string name="app_name">AppGasEta</string>
    <string name="txt_title">Gasolina X Etanol</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="txt_hint_litro_gasolina">R$ Litro/Gasolina?</string>
    <string name="txt_hint_name">Name</string>
    <string name="txt_hint_litro_etanol">R$ Litro/Etanol?</string>
    <string name="txt_name">Name</string>
    <string name="txt_resultado">RESULTADO</string>

    <string name="txt_hint_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_de_contato">Telefone de contato</string>
    <string name="txt_selecione_um_curso">Selecione um curso...</string>

</resources>