<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.AppCompat.ActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".applistacurso.view.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTituloApp"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:text="@string/txt_title"
                android:textSize="25dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/_16fuelpump_100368" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextLitroGasolina"
                    android:layout_width="160dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_litro_gasolina"
                    android:inputType="numberDecimal"
                    android:text=""
                    tools:layout_editor_absoluteX="0dp" />

                <EditText
                    android:id="@+id/editTextLitroEtanol"
                    android:layout_width="170dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:hint="@string/txt_hint_litro_etanol"
                    android:inputType="numberDecimal"
                    android:text=""
                    tools:layout_editor_absoluteX="47dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_calcular" />

            <TextView
                android:id="@+id/textResultado"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="140dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/txt_resultado"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_salvar" />


            <Button
                android:id="@+id/btnLimpar"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_limpar" />


            <Button
                android:id="@+id/btnFinalizar"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/btn_finalizar" />
        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>